# Vagus

./: .gitignore  FastQC_B.py  FastQC_G.py  FastQC_functions.py  README.md  fastqc.py  parsing_report.py  pyproject.toml  requirements.txt
.github/workflows/: python-lint.yml
Analysis_functions/: FastQC_B.py  FastQC_functions.py
Example_report/: Report.html
Report_data/: Report.html
Report_templates/: report.html.j2
